--- a/.github/workflows/one.yaml
+++ b/.github/workflows/one.yaml
@@ -3,23 +3,25 @@ on: [pull_request, push, workflow_dispatch]
 
 jobs:
   scan:
-    name: gitleaks
+    name: Gitleaks Scan
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: gitleaks/gitleaks-action@v2
+
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}} # Only for orgs
-      - uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }} # Only for orgs
         with:
-          args: detect --repo-path=. --redact
-          config-path: .gitleaks.toml
-          report-path: gitleaks-report.json 
-          report-format: json
-          leak-threshold: 0
-          
+          args: >
+            detect
+            --repo-path=.
+            --redact
+            --config-path=.gitleaks.toml
+            --report-path=gitleaks-report-${{ github.run_id }}.json
+            --report-format=json
+            --exit-code=2
